# GameEngine

./: .gitignore  .gitmodules  Build.lua  CMakeLists.txt  README.md  brainstorming.txt
App.example/: Build-App.lua
App.example/src/: App.cpp
Engine/src/Core/: Color.h  ErrorCodes.h
Engine/src/Core/ECS/: Registry.h
Engine/src/Core/ECS/Component/: Component.h
Engine/src/Core/ECS/Component/Components/: Audio.h  Core.h  Gameplay.h  Logic.h  Meta.h  Network.h  Physics.h  Rendering.h  SYSTEM.h
Engine/src/Core/ECS/Components/: Components.h
Engine/src/Core/ECS/Entity/: Entity.h  EntityManager.cpp  EntityManager.h
Engine/src/Core/ECS/Systems/: CollisionSystem.h  SystemManager.cpp
Engine/src/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Core/Level/: Level.h  LevelManager.cpp
Engine/src/Core/Renderer/RaylibRenderer/: RaylibRenderer.cpp
Game/src/: Game.cpp  Game.h
Game/src/Core/: Ball.h  Collision.cpp  Collision.h  Items.h
Game/src/Core/Music/: MusicManager.cpp  MusicManager.h
src/: Background.cpp  Background.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Items.h  Player.h  main.cpp
src/Core/: Collision.cpp  Collision.h  Color.h  Constants.h  Entity.cpp  Entity.h  ErrorCodes.h  Input.h  Player.h  StateManager.cpp  StateManager.h
src/Core/Components/: Collision.cpp  Collision.h
src/Core/ECS/: Components.h  ECS.cpp  ECS.h  Entity.h  EntityManager.cpp  EntityManager.h  Registry.cpp  Registry.h  Systems.cpp  Systems.h
src/Core/ECS/Entity/: EntityManager.cpp  EntityManager.h
src/Core/ECS/Systems/: CollisionSystem.cpp  CollisionSystem.h  System.h  SystemManager.h  Systems.cpp  Systems.h
src/Core/Graphics/: Draw.cpp  Draw.h
src/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/Core/Level/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.h
src/Core/Music/: MusicManager.cpp  MusicManager.h
src/Core/Renderer/: Renderer.h
src/Core/Renderer/RaylibRenderer/: RaylibRenderer.h  Window.h
